--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 JWT_ALG=HS256
 JWT_EXP=21000
 JWT_SECRET=SECRET
-DATABASE_URL=postgresql+asyncpg://user:password@app_db:5432/app
+DATABASE_URL=postgresql+asyncpg://user:password@db:5432/app
 
 SITE_DOMAIN=127.0.0.1
 SECURE_COOKIES=false
