--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,21 +6,22 @@ authors = ["Timur"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.95.2"
+fastapi = "0.103.2"
 orjson = "^3.8.12"
 SQLAlchemy = "^2.0.13"
-pydantic = {extras = ["email"], version = "^1.10.7"}
-uvicorn = {extras = ["standard"], version = "^0.22.0"}
+pydantic = {version = "2.4.2", extras = ["email"]}
+uvicorn = "0.23.2"
 sentry-sdk = "^1.23.1"
 python-jose = "^3.3.0"
 mapped = "^20.4.2"
 alembic = "^1.11.0"
-asyncpg = "^0.27.0"
+asyncpg = "0.28.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.6"
 pytest = "^7.3.1"
 async-asgi-testclient = "^1.4.11"
 pytest-asyncio = "^0.21.0"
+pydantic-settings = "2.0.3"
 
 [tool.poetry.dev-dependencies]
 
