fix deps and update poetry version

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 JWT_ALG=HS256
 JWT_EXP=21000
 JWT_SECRET=SECRET
-DATABASE_URL=postgresql+asyncpg://user:password@db:5432/app
+DATABASE_URL=postgresql+asyncpg://user:password@db:5432/template_db
 
 SITE_DOMAIN=127.0.0.1
 SECURE_COOKIES=false
@@ -13,4 +13,4 @@ CORS_ORIGINS=["http://localhost:3000"]
 
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
-POSTGRES_DB=db
+POSTGRES_DB=template_db
