--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ CORS_ORIGINS=["http://localhost:3000"]
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB=template_db
+
+REDIS_URL=redis://redis:6379/1
