--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,5 +22,10 @@ services:
     ports:
       - "5432:5432"
 
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+
 volumes:
   pg_data:
