--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ async-asgi-testclient = "^1.4.11"
 pytest-asyncio = "^0.21.0"
 pydantic-settings = "2.0.3"
 redis = "^5.0.1"
+gunicorn = "^21.2.0"
 
 [tool.poetry.dev-dependencies]
 
