--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,6 @@ POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB=template_db
 
-REDIS_URL=redis://redis:6379/1
+REDIS_URL=redis://redis:6379/0
+CELERY_BROKER_URL=redis://redis:6379/1
+CELERY_RESULT_BACKEND=redis://redis:6379/2
