--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 JWT_ALG=HS256
 JWT_EXP=21000
 JWT_SECRET=SECRET
-DATABASE_URL=postgresql+asyncpg://user:password@db:5432/template_db
 
 SITE_DOMAIN=127.0.0.1
 SECURE_COOKIES=false
@@ -11,10 +10,12 @@ ENVIRONMENT=LOCAL
 CORS_HEADERS=["*"]
 CORS_ORIGINS=["http://localhost:3000"]
 
-POSTGRES_USER=user
-POSTGRES_PASSWORD=password
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 POSTGRES_DB=template_db
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
 
 REDIS_URL=redis://redis:6379/0
-CELERY_BROKER_URL=redis://redis:6379/1
-CELERY_RESULT_BACKEND=redis://redis:6379/2
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
