--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ pydantic-settings = "2.0.3"
 redis = "^5.0.1"
 gunicorn = "^21.2.0"
 celery = "^5.3.4"
+flower = "^2.0.1"
+psycopg = "^3.1.16"
 
 [tool.poetry.dev-dependencies]
 
