--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,5 @@
 [pytest]
 env =
-    DATABASE_URL=postgresql://app:app@app_db/postgres
-    SITE_URL=
     JWT_ALG=HS256
     JWT_EXP=21000
     JWT_SECRET=SECRET
@@ -13,3 +11,14 @@ env =
 
     CORS_HEADERS=["*"]
     CORS_ORIGINS=["http://localhost:3000"]
+
+    POSTGRES_USER=postgres
+    POSTGRES_PASSWORD=postgres
+    POSTGRES_DB=template_db
+    POSTGRES_HOST=db
+    POSTGRES_PORT=5432
+
+    REDIS_URL=redis://redis:6379/0
+    CELERY_BROKER_URL=redis://redis:6379/0
+    CELERY_RESULT_BACKEND=redis://redis:6379/0
+
