remove poetry, added testcontainers for tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,24 +1,2 @@
 [pytest]
-env =
-    JWT_ALG=HS256
-    JWT_EXP=21000
-    JWT_SECRET=SECRET
-
-    SITE_DOMAIN=127.0.0.1
-    SECURE_COOKIES=false
-
-    ENVIRONMENT=TESTING
-
-    CORS_HEADERS=["*"]
-    CORS_ORIGINS=["http://localhost:3000"]
-
-    POSTGRES_USER=postgres
-    POSTGRES_PASSWORD=postgres
-    POSTGRES_DB=template_db
-    POSTGRES_HOST=db
-    POSTGRES_PORT=5432
-
-    REDIS_URL=redis://redis:6379/0
-    CELERY_BROKER_URL=redis://redis:6379/0
-    CELERY_RESULT_BACKEND=redis://redis:6379/0
-
+testpaths = ./tests/
