--- a/requirements/requirements.in
+++ b/requirements/requirements.in
@@ -9,8 +9,12 @@ python-multipart==0.0.6
 pydantic-settings==2.1.0
 httpx==0.27.0
 
+# Celery
 celery==5.3.6
 flower==2.0.1
+
+# Linter
+ruff==0.3.1
 
 # Drivers
 asyncpg==0.29.0
